Always include external modules